--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "start:open": "webpack-dev-server --open",
-    "build": "webpack"
+    "build": "webpack",
+    "lint": "prettier --write ."
   },
   "dependencies": {
     "panolens": "^0.11.0"
@@ -16,11 +17,13 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
+    "eslint": "^7.7.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "prettier": "^2.1.1"
   }
 }
