--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "build": "webpack",
     "lint": "prettier --write ."
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "prettier --write ."
+    }
+  },
   "dependencies": {
     "panolens": "^0.11.0"
   },
@@ -18,12 +23,14 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
     "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "prettier": "^2.1.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "prettier": "^2.1.1"
+    "webpack-dev-server": "^3.11.0"
   }
 }
