--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "prettier --write ."
   },
   "lint-staged": {
-    "*.js": "eslint"
+    "*.js": "prettier --write ."
   },
   "husky": {
     "hooks": {
