--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "test": "./node_modules/.bin/jest",
     "lint": "prettier --write"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|png|svg)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
+  },
   "lint-staged": {
     "*.js": "prettier --write"
   },
@@ -26,20 +32,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "babel-jest": "^26.3.0",
     "@babel/eslint-plugin": "^7.11.3",
+    "@babel/preset-env": "^7.11.5",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.1",
-    "eslint": "^7.7.0",
+    "eslint": "^7.8.1",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^24.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "jest": "^26.4.2",
     "husky": "^4.2.5",
+    "jest": "^26.4.2",
     "lint-staged": "^10.2.13",
     "prettier": "^2.1.1",
     "style-loader": "^1.2.1",
