remove unused jest eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,12 +9,7 @@
   "extends": ["eslint:recommended", "prettier", "plugin:jest/recommended"],
   "plugins": ["@babel", "prettier", "jest"],
   "rules": {
-    "prettier/prettier": "error",
-    "jest/no-disabled-tests": "warn",
-    "jest/no-focused-tests": "error",
-    "jest/no-identical-title": "error",
-    "jest/prefer-to-have-length": "warn",
-    "jest/valid-expect": "error"
+    "prettier/prettier": "error"
   },
   "parserOptions": {
     "parser": "babel-eslint",
