--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "husky": "^4.2.5",
     "jest": "^26.4.2",
     "lint-staged": "^10.2.13",
+    "html-loader": "^1.3.0",
     "prettier": "^2.1.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
