--- a/.eslintrc
+++ b/.eslintrc
@@ -3,11 +3,10 @@
   "env": {
     "browser": true,
     "es6": true,
-    "node": true,
-    "jest/globals": true
+    "node": true
   },
-  "extends": ["eslint:recommended", "prettier", "plugin:jest/recommended"],
-  "plugins": ["@babel", "prettier", "jest"],
+  "extends": ["eslint:recommended", "prettier"],
+  "plugins": ["@babel", "prettier"],
   "rules": {
     "prettier/prettier": "error"
   },
